# mi-jpeg

./: .gitignore  CMakeLists.txt
cjpeg/: CMakeLists.txt  mi_huffman_encode.h  mi_jpeg.cpp  mi_jpeg.h  mi_jpeg_define.h  mi_jpeg_fast_dct.h  mi_jpeg_fast_dct_2.h  mi_jpeg_main.cpp  mi_jpeg_quantize.h  mi_jpeg_slow_dct.h
cjpegencoder/: CMakeLists.txt  mi_jpeg_encoder.cpp  mi_jpeg_encoder.h  mi_main.cpp
data/: img-1592-944.raw
gjpegencoder/: CMakeLists.txt  kernel_gpu_jpeg_encoder.cu  mi_gpu_jpeg_define.h  mi_gpu_jpeg_encoder.h
gjpegencoder/culib/: CMakeLists.txt  kernel_gpu_jpeg_encoder.cu  kernel_gpu_jpeg_encoder_op.cu  mi_gpu_jpeg_define.h  mi_gpu_jpeg_encoder.cpp  mi_gpu_jpeg_encoder.h
gjpegencoder/src/: CMakeLists.txt  mi_main.cpp
gpujpeg/: CMakeLists.txt  mi_main.cpp
jpegencoder/: CMakeLists.txt  jpeg_encoder.cpp  jpeg_encoder.h  main.cpp  mian.cpp
libjpeg/: CMakeLists.txt  mi_libjpeg_sample.cpp
test/: CMakeLists.txt  mi_main.cpp
